# tarachat

./: .dclintrc  .env.example  .gitignore  CHANGES.rst  DOCUMENT_INGESTION.md  GETTING_STARTED.md  INGESTION_SUMMARY.md  LICENSE.rst  Makefile  PDF_UPLOAD.md  README.md  README.rst  TODO  TROUBLESHOOTING.md  USAGE.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
.github/: renovate.json
.github/workflows/: deploy.yml  test.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  README.rst  REGLEMENTS  pyproject.toml
backend/app/: config.py  main.py  models.py  rag.py
backend/scripts/: ingest_documents.py  init_data.py  scrape_web.py
backend/tarachat/: app.py  config.py  ingest.py  logger.py  main.py  models.py  pdf.py  pdf_processor.py  pdf_serve.py  rag.py  scrape.py
backend/tarachat/testing/: compose.py  fixtures.py  http.py  services.py
backend/tests/: test_api.py  test_ingest.py  test_models.py  test_pdf_processor.py
backend/tests/integration/: test_api.py  test_rag.py
backend/tests/unit/: test_api.py  test_cli.py  test_config.py  test_ingest.py  test_logger.py  test_models.py  test_pdf.py  test_pdf_processor.py  test_rag.py  test_scrape.py
certbot/: deploy-hook.sh  generate-cert.sh
frontend/: Dockerfile  Makefile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: Chat.css  Chat.test.tsx  Chat.tsx  CitationText.css  CitationText.test.ts  CitationText.tsx  Header.css  Header.test.tsx  Header.tsx  MessageBubble.css  MessageBubble.test.tsx  MessageBubble.tsx  MessageInput.css  MessageInput.test.tsx  MessageInput.tsx  MessageList.css  MessageList.test.tsx  MessageList.tsx  PdfViewer.css  PdfViewer.tsx  StatusBar.css  StatusBar.test.tsx  StatusBar.tsx
frontend/src/locales/: en.json  fr.json
nginx/: Dockerfile  bootstrap.py  nginx.conf
nginx/conf.d/: site.conf
nginx/conf.d/templates/: sites-default.conf.j2
