[project]
name = "tarachat"
version = "0.1.0"
description = "RAG chatbot backend with CroissantLLM."
authors = [
    {name = "Marc Tardif", email = "marc@taram.ca"},
]
readme = "README.rst"
repository = "https://github.com/cr3/tarachat"
packages = [
    {include = "tarachat"},
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "accelerate>=1.7.0,<2.0.0",
    "aiofiles>=25.1.0,<25.2.0",
    "aiohttp>=3.13.2,<4.0.0",
    "beautifulsoup4>=4.14.2,<5.0.0",
    "faiss-cpu>=1.7.4,<2.0.0",
    "fastapi>=0.109.0,<1.0.0",
    "httpx>=0.26.0,<1.0.0",
    "langchain>=1.2.15,<1.3.0",
    "langchain-community>=0.0.10,<1.0.0",
    "langchain-text-splitters>=1.1.1,<1.2.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "pymupdf>=1.25.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "requests>=2.32.5,<3.0.0",
    "sentence-transformers>=5.4.0,<5.5.0",
    "torch>=2.1.0,<3.0.0",
    "transformers>=5.5.0,<5.6.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "yarl>=1.22.0,<2.0.0",
]

[project.optional-dependencies]
test = [
    "attrs>=26.1.0,<26.2.0",
    "coverage>=7.2.3,<8.0.0",
    "httpx>=0.26.0,<1.0.0",
    "more-itertools>=11.0.1,<11.1.0",
    "pytest>=7.4.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<1.4.0",
    "pytest-xdocker>=0.2.0,<1.0.0",
]
check = [
    "ruff>=0.15.0,<1.0.0",
]

[project.scripts]
tarachat-ingest = "tarachat.ingest:main"
tarachat-scrape = "tarachat.scrape:main"

[project.entry-points."pytest11"]
tarachat = "tarachat.testing.fixtures"
tarachat-services = "tarachat.testing.services"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true
lint.select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
lint.ignore = [
    # LineTooLong
    "E501",
    # Create your own exception
    "TRY002",
    # Avoid specifying long messages outside the exception class
    "TRY003",
    # Depends() in argument defaults is standard FastAPI
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S104", "S106"]
"tarachat/testing/*" = ["S101"]

# Pytest options:
#   https://docs.pytest.org/en/6.2.x/reference.html#ini-options-ref
[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--doctest-glob=*.rst",
]
testpaths = [
    "tarachat",
    "docs",
    "tests",
]

# Coverage options:
#   https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.paths]
source = [
    "tarachat",
    "*/*/site-packages",
]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.coverage.run]
branch = true
parallel = true
source = ["tarachat"]
omit = ["tarachat/testing/*"]
